@@ -320,6 +320,33 @@ var GPGLin = {
 		// We return result
 		return result;
 	},
+
+	// Export a key
+	export: function(key) {
+		
+		var tmpStdOut = getTmpFile(); // Output from gpg
+		var tmpRun = getTmpFileRunning();
+
+		// We lanch gpg
+		var running = getContent("chrome://firegpg/content/run.sh")
+		
+		putIntoFile(tmpRun,running);
+		
+		runCommand(tmpRun,
+		           '' + this.getGPGCommand() + '' +  " " + tmpStdOut +
+		           " --quiet --no-tty --no-verbose --status-fd 1 --armor" + 
+		           " --export " + key);
+		
+		// We get the result
+		var result = getFromFile(tmpStdOut);
+		
+		// We delete tempory files
+		removeFile(tmpStdOut);
+		removeFile(tmpRun);
+		
+		// We return result
+		return result;
+	},
 	
 	//Return the GPG's command to use
 	getGPGCommand: function () {
